--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -2,5 +2,7 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">cwl.gov.cn</domain>
+        <domain includeSubdomains="true">kaijiang.500.com</domain>
+        <domain includeSubdomains="true">360.cn</domain>
     </domain-config>
 </network-security-config>
